--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-image-gallery": "^0.8.18",
+    "react-medium-image-zoom": "^3.1.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
